<resources>
    <string name="app_name">Doubt Nut</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="mobile_number_10_digit">Mobile Number (10 - digit)</string>
    <string name="signup_using_otp">Login Using OTP</string>
    <string name="all_rights_are_reserved">All rights are reserved</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="scientifica_edu_pvt_ltd">scientifica.edu PVT LTD</string>
    <string name="we_have_send_the_top_on_8700564484_nwill_apply_auto_to_the_fields">We have send the top on </string>
    <string name="if_you_don_t_receive_a_code">If you don,t receive a code?</string>
    <string name="mobile_verification_has_nsuccessfully_done">Mobile Verification has\nsuccessfully done</string>
    <string name="user_name">Enter your name</string>
    <string name="user_ame">User name</string>
    <string name="ask_your_doubt_here">Ask your doubt here</string>
    <string name="popular_books_of_ncert">Popular Books of NCERT</string>
    <string name="or">or</string>

    <string name="scientifica">Scientifica</string>

    <string name="education">Education</string>
    <string name="scientificao">scientifica.edu PVT LTD</string>

    <string name="my_bio">My Bio</string>
    <string name="rights">All rights are reserved</string>
    <string name="ask_doubts">Ask Doubts</string>
    <string name="write_your_doubts">Write your Doubts...</string>
    <string name="popoluar_books">Popular Books Solutions</string>
    <string name="see_all">See All</string>
    <string name="upload_image">Upload Image</string>
    <string name="ncert_video_solution">NCERT Video Solution</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="mathematics">Mathematics</string>
    <string name="likes">Likes</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string-array name="All_Categories">
        <item>Class 11</item>
        <item>Class 12</item>
        <item>JEE Mains</item>
        <item>JEE Advance</item>
    </string-array>


    <string-array name="SUbjects">
        <item>Mathematics</item>
        <item>Chemistry</item>
        <item>Physics</item>
    </string-array>

    <string-array name="Difficultylevel">
        <item>Easy</item>
        <item>Medium</item>
        <item>Difficult</item>
    </string-array>
</resources>