<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".Login_Details.Registration">

    <LinearLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="403dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/shape"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_marginTop="20dp"
            android:transitionName="logo_transition"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/zondicons_education"
            android:tint="#fff" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/signUp_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        app:cardCornerRadius="10dp"
        android:background="@drawable/cardviewbackground2"
        android:elevation="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            android:elevation="1dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#2196F3"
                    android:orientation="horizontal"
                    android:paddingBottom="1.5sp">

                    <TextView
                        android:id="@+id/login_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#fff"
                        android:fontFamily="@font/poppins"
                        android:padding="5dp"
                        android:text="@string/login"
                        android:textAlignment="center"
                        android:onClick="loginText"
                        android:textColor="#016EC5"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/signup_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#016EC5"
                        android:fontFamily="@font/poppins"
                        android:padding="5dp"
                        android:text="@string/signup"
                        android:textAlignment="center"
                        android:textColor="#fff"
                        android:textSize="22sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@drawable/line" />

            </LinearLayout>

            <com.shobhitpuri.custombuttons.GoogleSignInButton
                android:id="@+id/google"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="30dp"
                android:text="@string/continue_with_google"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="5dp"
                android:elevation="1dp"
                android:fontFamily="@font/poppins" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:layout_weight="1"
                    android:background="?android:attr/listDivider"
                    android:backgroundTint="#000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="or"
                    android:textColor="#444"
                    android:textSize="25sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="35dp"
                    android:layout_weight="1"
                    android:background="?android:attr/listDivider"
                    android:backgroundTint="#000" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="15dp">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/codepicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_showFullName="false"
                    app:ccp_showArrow="false"
                    app:ccp_showPhoneCode="true"
                    app:ccpDialog_showCloseIcon="false"
                    app:ccpDialog_showPhoneCode="false"
                    app:ccp_showFlag="false"
                    android:layout_gravity="center"
                    app:ccpDialog_showTitle="false"
                    app:ccpDialog_showNameCode="false"
                    app:ccpDialog_showFastScroller="false"
                    app:ccpDialog_showFlag="false"
                    android:layout_weight="4"
                    app:ccp_showNameCode="false"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#18A0FB"
                    app:endIconMode="clear_text"
                    app:endIconTint="#222"
                    android:layout_weight="1"
                    app:errorEnabled="true"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins"
                        android:hint="@string/mobile_number_10_digit"
                        android:inputType="numberDecimal"
                        android:textColor="#222"
                        android:textColorHint="#222"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/buttonshape"
                android:elevation="10dp"
                android:fontFamily="@font/poppins"
                android:text="Signup Using OTP"
                android:onClick="getNewPhoneNumber"
                android:textAllCaps="false"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/all_rights_"
        android:layout_width="170dp"
        android:layout_height="24dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/poppins"
        android:gravity="center_horizontal|top"
        android:text="@string/rights"
        android:transitionName="text_transition"
        android:textAppearance="@style/all_rights_" />

</RelativeLayout>